Remove margin top to fix alignment

--- a/css/header.css
+++ b/css/header.css
@@ -80,7 +80,6 @@
 	width: auto !important;
   max-width: max-content;
   left: auto !important;
-  margin-top: -.625rem;
   right: 1rem;
 	overflow: clip;
 	filter: drop-shadow(0 1rem 1rem black);
